<resources>
    <string name="app_name">Mandiri Bank Assessment</string>
    <string name="release_text">Release</string>
    <string name="runtime_text">Runtime</string>
    <string name="genre_text">Genre</string>
    <string name="description_text">Description</string>
    <string name="watch_trailer_text">Watch\nTrailer</string>

    <string name="empty_review_message">There is no review yet.</string>

    <string name="error_movie_details">Cannot load the movie details</string>
    <string name="error_movie_reviews">Cannot load the movie reviews</string>
</resources>