<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="com.damai.base.bindingadapters.ViewBindingAdapter" />

        <variable
            name="vm"
            type="com.damai.insuramediasolusi.ui.detail.MovieDetailViewModel" />

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/grey_bg"
        android:fitsSystemWindows="false">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/dimen_8">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivMovieBigBanner"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintDimensionRatio="1.779"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:loadBigImage="@{vm.movieDetailsLiveData.bannerPath}"
                tools:background="@color/dodger_blue" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cvMovieThumbnail"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:cardCornerRadius="@dimen/dimen_8"
                app:cardElevation="@dimen/dimen_8"
                app:cardMaxElevation="@dimen/dimen_16"
                app:layout_constraintDimensionRatio="0.6667"
                app:layout_constraintStart_toEndOf="@+id/guidelineLeftPadding"
                app:layout_constraintTop_toTopOf="@+id/spaceTopBanner"
                app:layout_constraintWidth_percent="0.3">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/ivMovieThumbnail"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:loadImage="@{vm.movieDetailsLiveData.posterPath}"
                    tools:background="@color/indian_red" />

            </com.google.android.material.card.MaterialCardView>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/clMovieReviewCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?android:attr/selectableItemBackgroundBorderless"
                android:padding="@dimen/dimen_8"
                app:layout_constraintBottom_toBottomOf="@+id/cvMovieThumbnail"
                app:layout_constraintEnd_toStartOf="@+id/clTrailerMovieVideo"
                app:layout_constraintStart_toEndOf="@+id/cvMovieThumbnail"
                app:layout_constraintTop_toBottomOf="@+id/ivMovieBigBanner">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/ivMovieReviewCount"
                    android:layout_width="@dimen/dimen_24"
                    android:layout_height="@dimen/dimen_24"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_reviews_48px"
                    app:tint="@color/yellow" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvMovieReviewCount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:paddingTop="@dimen/dimen_4"
                    android:textColor="@color/white"
                    android:textSize="@dimen/font_14"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/ivMovieReviewCount"
                    app:movieReviews="@{vm.movieDetailsLiveData.voteCount}"
                    tools:text="900+\nReviews" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/clTrailerMovieVideo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?android:attr/selectableItemBackgroundBorderless"
                android:padding="@dimen/dimen_8"
                app:layout_constraintBottom_toBottomOf="@+id/cvMovieThumbnail"
                app:layout_constraintEnd_toStartOf="@+id/guidelineRightPadding"
                app:layout_constraintStart_toEndOf="@+id/clMovieReviewCount"
                app:layout_constraintTop_toBottomOf="@+id/ivMovieBigBanner">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/ivTrailerMovieVideo"
                    android:layout_width="@dimen/dimen_24"
                    android:layout_height="@dimen/dimen_24"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_play_circle_24px"
                    app:tint="@color/dim_gray" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvTrailerMovieVideo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:paddingTop="@dimen/dimen_4"
                    android:text="@string/watch_trailer_text"
                    android:textColor="@color/dim_gray"
                    android:textSize="@dimen/font_14"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/ivTrailerMovieVideo" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <Space
                android:id="@+id/spaceBetweenMovieThumbnailAndTitle"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/dimen_8"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cvMovieThumbnail" />

            <View
                android:id="@+id/viewBgDetails"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="@drawable/bg_rectangle_rounded_black"
                app:layout_constraintBottom_toBottomOf="@+id/tvMovieDescription"
                app:layout_constraintEnd_toEndOf="@+id/tvMovieTitle"
                app:layout_constraintStart_toStartOf="@+id/tvMovieTitle"
                app:layout_constraintTop_toTopOf="@+id/tvMovieTitle" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvMovieTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingHorizontal="@dimen/dimen_12"
                android:paddingVertical="@dimen/dimen_8"
                android:textColor="@color/white"
                android:text="@{vm.movieDetailsLiveData.title}"
                android:textSize="@dimen/font_18"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/guidelineRightPadding"
                app:layout_constraintStart_toEndOf="@+id/guidelineLeftPadding"
                app:layout_constraintTop_toBottomOf="@+id/spaceBetweenMovieThumbnailAndTitle"
                tools:text="Captain America" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvReleaseText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@color/dark_olive_green"
                android:paddingHorizontal="@dimen/dimen_6"
                android:paddingVertical="@dimen/dimen_8"
                android:text="@string/release_text"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="@dimen/font_12"
                app:layout_constraintEnd_toStartOf="@+id/tvRuntimeText"
                app:layout_constraintStart_toEndOf="@+id/guidelineLeftPadding"
                app:layout_constraintTop_toBottomOf="@+id/tvMovieTitle" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvRuntimeText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/dark_olive_green"
                android:paddingHorizontal="@dimen/dimen_6"
                android:paddingVertical="@dimen/dimen_8"
                android:text="@string/runtime_text"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="@dimen/font_12"
                app:layout_constraintEnd_toStartOf="@+id/guidelineRightPadding"
                app:layout_constraintTop_toBottomOf="@+id/tvMovieTitle" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvMovieRelease"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingHorizontal="@dimen/dimen_12"
                android:paddingVertical="@dimen/dimen_8"
                android:textColor="@color/white"
                android:textSize="@dimen/font_12"
                app:layout_constraintStart_toEndOf="@+id/guidelineLeftPadding"
                app:layout_constraintTop_toBottomOf="@+id/tvReleaseText"
                app:movieYear="@{vm.movieDetailsLiveData.releaseDate}"
                tools:text="(2012)" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvMovieRuntime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingHorizontal="@dimen/dimen_12"
                android:paddingVertical="@dimen/dimen_8"
                android:textColor="@color/white"
                android:textSize="@dimen/font_12"
                app:layout_constraintEnd_toStartOf="@+id/guidelineRightPadding"
                app:layout_constraintTop_toBottomOf="@+id/tvRuntimeText"
                app:movieRuntime="@{vm.movieDetailsLiveData.runtime}"
                tools:text="152 min" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvGenreText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@color/dark_olive_green"
                android:paddingHorizontal="@dimen/dimen_6"
                android:paddingVertical="@dimen/dimen_8"
                android:text="@string/genre_text"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="@dimen/font_12"
                app:layout_constraintEnd_toEndOf="@+id/guidelineRightPadding"
                app:layout_constraintStart_toEndOf="@+id/guidelineLeftPadding"
                app:layout_constraintTop_toBottomOf="@+id/tvMovieRelease" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvMovieGenres"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingHorizontal="@dimen/dimen_12"
                android:paddingVertical="@dimen/dimen_8"
                android:text="@{vm.movieDetailsLiveData.genresText}"
                android:textColor="@color/white"
                android:textSize="@dimen/font_12"
                app:layout_constraintEnd_toStartOf="@+id/guidelineRightPadding"
                app:layout_constraintStart_toEndOf="@+id/guidelineLeftPadding"
                app:layout_constraintTop_toBottomOf="@+id/tvGenreText"
                tools:text="Action - Sci-fi - Drama" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvDescriptionText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@color/dark_olive_green"
                android:paddingHorizontal="@dimen/dimen_6"
                android:paddingVertical="@dimen/dimen_8"
                android:text="@string/description_text"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="@dimen/font_12"
                app:layout_constraintEnd_toStartOf="@id/guidelineRightPadding"
                app:layout_constraintStart_toEndOf="@+id/guidelineLeftPadding"
                app:layout_constraintTop_toBottomOf="@+id/tvMovieGenres" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvMovieDescription"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:lineSpacingExtra="3sp"
                android:paddingHorizontal="@dimen/dimen_12"
                android:paddingVertical="@dimen/dimen_8"
                android:text="@{vm.movieDetailsLiveData.overview}"
                android:textColor="@color/white"
                android:textSize="@dimen/font_12"
                app:layout_constraintEnd_toStartOf="@+id/guidelineRightPadding"
                app:layout_constraintStart_toEndOf="@+id/guidelineLeftPadding"
                app:layout_constraintTop_toBottomOf="@+id/tvDescriptionText"
                tools:text="@tools:sample/lorem/random" />
            
            <Space
                android:id="@+id/spaceTopBanner"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintBottom_toBottomOf="@+id/ivMovieBigBanner"
                app:layout_constraintDimensionRatio="6.5"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guidelineLeftPadding"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="@dimen/dimen_8" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guidelineRightPadding"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_end="@dimen/dimen_8" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</layout>